2011-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests.in:
	* TestFramework/GNUmakefile.in:
	* TestFramework/README:
	Override GNUSTEP_OBJ_DIR so that executables are always stored in ./obj
	even if we are building non-flattened.  There's no point using a
	non-flattened layout inside the test framework as we need to clean and
	re-build for each test run anyway.

2011-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests.in:
	Speed up --clean option

2011-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests.in:
	* TestFramework/GNUmakefile.in:
	Fix error testing single file ... was trying subdirectories too.

2011-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/example9.m: Fix include
	* TestFramework/example8.m: Fix include
	* TestFramework/gnustep-tests.in:
	* TestFramework/README:
	Add (untested) support for Objective-C++
	Implement parallel build so that all the tests in a directory should
	be built simultaneously making more effective use of multiprocessor
	systems. Add the --sequential command line option to disable this if
	desired.

2011-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/Testing.h: Cosmetic improvement ... indent the results
	of tests and the start/end of sets in the full diagnostic log.

2011-02-24  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/example9.m:
	* TestFramework/ObjectTesting.h:
	* TestFramework/README:
	* TestFramework/Testing.h:
	* TestFramework/example2.m:
	* TestFramework/example3.m:
	* TestFramework/example4.m:
	* TestFramework/example5.m:
	* TestFramework/example6.m:
	* TestFramework/example7.m:
	* TestFramework/example8.m:
	Important change to the START_SET and END_SET macros to stop their use
	being confusing.  They now both take a simple C-string argument which
	names the set, and the macros check that each end matches a start of
	the same name.  Since tis means that a START_SET no longer takes an