@@ -1,3 +1,10 @@
+2011-03-06  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* gnustep-config.in:
+	* TestFramework/GNUmakefile.in:
+        Add and use --debug-flags optin to gnustep-config ... to get the correct
+        flags to build a file for debugging.
+
 2011-03-01  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* TestFramework/gnustep-tests.in:
